# part-select

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: config.py  graph.py  main.py  prompts.py  state.py
backend/data/: mock_data.py  seed_chroma.py  seed_data.py
backend/tools/: tools.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/api/: api.js
frontend/src/components/: Cart.css  Cart.js  ChatWindow.css  ChatWindow.js  ProductCard.css  ProductCard.js
