[project]
name = "case-study-instalily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.4",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "numpy>=2.4.6",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "sse-starlette>=3.4.4",
    "tavily-python>=0.7.24",
    "uvicorn>=0.48.0",
]
